--- a/photography/photography.html
+++ b/photography/photography.html
@@ -31,7 +31,7 @@
 			</div> -->
 
 			<h2 class="misc-title">photography</h2>
-			<h4 class="misc-subtitle" id="photog-subtext">Portraits, street, exploration, and much more from my eyes. Follow me on <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a> and <a href="https://www.500px.com/jefferyyli/" class="person" target=_blank>500px</a> to stay updated. [page is still a WIP!]</h4>
+			<h4 class="misc-subtitle" id="photog-subtext">Portraits, street, exploration, and much more from my eyes. Follow me on <a href="https://www.instagram.com/jefferyyli/" class="person" target=_blank>Instagram</a> and <a href="https://www.500px.com/jefferyyli/" class="person" target=_blank>500px</a> to stay updated.</h4>
 
 		<!-- end container margins -->
 		</div>
@@ -41,40 +41,66 @@
 			<div class="gallery-container">
 
 				<div class="gallery">
-					<div class="gal-img" id="lookup"></div>
-					<!-- <div class="gal-img"><img src="../assets/images/photography/lookup.jpg" class="photog-img" id="lookup"/></div> -->
+					<a href="#lookup1">
+						<div class="gal-img"><img src="../assets/images/photography/lookup.jpg" class="photog-img" id="lookup"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="lookup1"><img src="../assets/images/photography/lookup.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="fdr"></div>
+					<a href="#fdr1">
+						<div class="gal-img"><img src="../assets/images/photography/fdr.jpg" class="photog-img" id="fdr"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="fdr1"><img src="../assets/images/photography/fdr.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="aura"></div>
+					<a href="#aura1">
+						<div class="gal-img"><img src="../assets/images/photography/aura.jpg" class="photog-img" id="aura"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="aura1"><img src="../assets/images/photography/aura.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="timesfoot"></div>
+					<a href="#timesfeet1">
+						<div class="gal-img"><img src="../assets/images/photography/timesfoot.jpg" class="photog-img"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="timesfeet1"><img src="../assets/images/photography/timesfoot.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="vivian"></div>
+					<a href="#vivian1">
+						<div class="gal-img"><img src="../assets/images/photography/vivian.jpg" class="photog-img" id="vivian"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="vivian1"><img src="../assets/images/photography/vivian.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="tobermory"></div>
+					<a href="#tobermory1">
+						<div class="gal-img"><img src="../assets/images/photography/tobermory.jpg" class="photog-img" id="tobermory"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="tobermory1"><img src="../assets/images/photography/tobermory.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="paces2"></div>
+					<a href="#paces21">
+						<div class="gal-img"><img src="../assets/images/photography/paces2.jpg" class="photog-img" id="paces2"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="paces21"><img src="../assets/images/photography/paces2.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="lostintime"></div>
+					<a href="#lostintime1">
+						<div class="gal-img"><img src="../assets/images/photography/lostintime.jpg" class="photog-img" id="lostintime"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="lostintime1"><img src="../assets/images/photography/lostintime.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="aurafeet"></div>
+					<a href="#aurafeet1">
+						<div class="gal-img"><img src="../assets/images/photography/aurafeet.jpg" class="photog-img" id="aurafeet"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="aurafeet1"><img src="../assets/images/photography/aurafeet.jpg"></a>
 				</div>
 
 				<div class="gallery">
