--- a/photography/photography.html
+++ b/photography/photography.html
@@ -104,31 +104,52 @@
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="paces"></div>
+					<a href="#paces1">
+						<div class="gal-img"><img src="../assets/images/photography/paces.jpg" class="photog-img" id="paces"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="paces1"><img src="../assets/images/photography/paces.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="sarah"></div>
+					<a href="#sarah1">
+						<div class="gal-img"><img src="../assets/images/photography/sarah.jpg" class="photog-img" id="sarah"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="sarah1"><img src="../assets/images/photography/sarah.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="lookdown"></div>
+					<a href="#lookdown1">
+						<div class="gal-img"><img src="../assets/images/photography/lookdown.jpg" class="photog-img" id="lookdown"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="lookdown1"><img src="../assets/images/photography/lookdown.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="times-square"></div>
+					<a href="#times-sq1">
+						<div class="gal-img"><img src="../assets/images/photography/times-square.jpg" class="photog-img"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="times-sq1"><img src="../assets/images/photography/times-square.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="sarah2"></div>
+					<a href="#sarah21">
+						<div class="gal-img"><img src="../assets/images/photography/sarah2.jpg" class="photog-img" id="sarah2"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="sarah21"><img src="../assets/images/photography/sarah2.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="brooklyn-sunset"></div>
+					<a href="#brooklyn-sunset1">
+						<div class="gal-img"><img src="../assets/images/photography/brooklynsunset.jpg" class="photog-img"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="brooklyn-sunset1"><img src="../assets/images/photography/brooklynsunset.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="street"></div>
+					<a href="#street1">
+						<div class="gal-img"><img src="../assets/images/photography/street.jpg" class="photog-img" id="street"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="street1"><img src="../assets/images/photography/street.jpg"></a>
 				</div>
 
 				<div class="gallery">
