--- a/photography/photography.html
+++ b/photography/photography.html
@@ -153,7 +153,10 @@
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="yellowcab"></div>
+					<a href="#yellowcab1">
+						<div class="gal-img"><img src="../assets/images/photography/yellowcab.jpg" class="photog-img" id="yellowcab"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="yellowcab1"><img src="../assets/images/photography/yellowcab.jpg"></a>
 				</div>
 
 				<!-- <div class="gallery">
@@ -165,63 +168,108 @@
 				</div> -->
 
 				<div class="gallery">
-					<div class="gal-img" id="sfcity"></div>
+					<a href="#sfcity1">
+						<div class="gal-img"><img src="../assets/images/photography/sfcity.jpg" class="photog-img" id="sfcity"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="sfcity1"><img src="../assets/images/photography/sfcity.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="cherryblossom"></div>
+					<a href="#cherryblossom1">
+						<div class="gal-img"><img src="../assets/images/photography/flowers.jpg" class="photog-img" id="cherryblossom"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="cherryblossom1"><img src="../assets/images/photography/flowers.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="toronto2"></div>
+					<a href="#toronto21">
+						<div class="gal-img"><img src="../assets/images/photography/toronto2.jpg" class="photog-img"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="toronto21"><img src="../assets/images/photography/toronto2.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="vivian2"></div>
+					<a href="#vivian21">
+						<div class="gal-img"><img src="../assets/images/photography/vivian2.jpg" class="photog-img" id="vivian2"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="vivian21"><img src="../assets/images/photography/vivian2.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="lookdown2"></div>
+					<a href="#lookdown21">
+						<div class="gal-img"><img src="../assets/images/photography/lookdown2.jpg" class="photog-img" id="lookdown2"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="lookdown21"><img src="../assets/images/photography/lookdown2.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="goldengate"></div>
+					<a href="#goldengate1">
+						<div class="gal-img"><img src="../assets/images/photography/goldengate.jpg" class="photog-img"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="goldengate1"><img src="../assets/images/photography/goldengate.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="nycshore"></div>
+					<a href="#nycshore1">
+						<div class="gal-img"><img src="../assets/images/photography/nycshore.jpg" class="photog-img" id="nycshore"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="nycshore1"><img src="../assets/images/photography/nycshore.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="toronto3"></div>
+					<a href="#toronto31">
+						<div class="gal-img"><img src="../assets/images/photography/toronto3.jpg" class="photog-img"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="toronto31"><img src="../assets/images/photography/toronto3.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="oculus"></div>
+					<a href="#oculus1">
+						<div class="gal-img"><img src="../assets/images/photography/oculus.jpg" class="photog-img" id="oculus"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="oculus1"><img src="../assets/images/photography/oculus.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="brooklyn"></div>
+					<a href="#brooklyn1">
+						<div class="gal-img"><img src="../assets/images/photography/brooklyn.jpg" class="photog-img" id="brooklyn"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="brooklyn1"><img src="../assets/images/photography/brooklyn.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="manhattan"></div>
+					<a href="#manhattan1">
+						<div class="gal-img"><img src="../assets/images/photography/manhattan.jpg" class="photog-img" id="manhattan"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="manhattan1"><img src="../assets/images/photography/manhattan.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="muroof"></div>
+					<a href="#muroof1">
+						<div class="gal-img"><img src="../assets/images/photography/muroof.jpg" class="photog-img" id="muroof"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="muroof1"><img src="../assets/images/photography/muroof.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="lookup2"></div>
+					<a href="#lookup21">
+						<div class="gal-img"><img src="../assets/images/photography/lookup2.jpg" class="photog-img" id="lookup2"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="lookup21"><img src="../assets/images/photography/lookup2.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="tobermory2"></div>
+					<a href="#tobermory21">
+						<div class="gal-img"><img src="../assets/images/photography/tobermory2.jpg" class="photog-img" id="tobermory2"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="tobermory21"><img src="../assets/images/photography/tobermory2.jpg"></a>
 				</div>
 
 				<div class="gallery">
-					<div class="gal-img" id="wloofog"></div>
+					<a href="#wloofog1">
+						<div class="gal-img"><img src="../assets/images/photography/wloofog.jpg" class="photog-img" id="wloofog"/></div>
+					</a>
+					<a href="#_" class="lightbox" id="wloofog1"><img src="../assets/images/photography/wloofog.jpg"></a>
 				</div>
 
 			</div>
