--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 			<div class="about-sect">
 				<div class="about-left">
-					<div class="about-img"><img src="assets/images/me2.jpg" alt="jeffery li"></div>
+					<div class="about-img"><img src="assets/images/me.png" alt="jeffery li"></div>
 				</div>
 				<div class="about-right">
 					<h2 class="about">About</h2>
