env app updates

--- a/design/envapp.html
+++ b/design/envapp.html
@@ -30,7 +30,7 @@
 
 		</div>
 
-		<div class="banner" style="background-image: url('../assets/images/design/envapp/envapp-banner.jpg'); background-color: #7fdd99"><body id="top"></div>
+		<div class="banner" style="background-image: url('../assets/images/design/envapp/envapp-banner.jpg'); background-color: #dfe5e9"><body id="top"></div>
 
 		<div class="container">
 			<p class="proj-tags">UI Design</p>
