--- a/design/HTNmobileapp.html
+++ b/design/HTNmobileapp.html
@@ -30,7 +30,7 @@
 
 		</div>
 
-		<div class="banner" style="background-image: url('../assets/images/design/HTN-mobile/HTN-banner.png'); background-color: #1b2828"><body id="top"></div>
+		<div class="banner" style="background-image: url('../assets/images/design/HTN-mobile/HTN-banner.png')"><body id="top"></div>
 
 		<div class="container">
 			<p class="proj-tags">UI/UX Design</p>
