--- a/design/rbcpathway.html
+++ b/design/rbcpathway.html
@@ -30,11 +30,12 @@
 
 		</div>
 		
-		<div class="banner" style="background-image: url('../assets/images/design/rbc/rbc-banner.jpg'); background-color: #1e62c3;"><body id="top"></div>
+		<div class="banner" style="background-image: url('../assets/images/design/rbc/rbc-banner.jpg');"><body id="top"></div>
 
 		<div class="container">
 			<p class="proj-tags">Design Thinking, UI/UX Design, User Research</p>
 			<p>During my internship at the Royal Bank of Canada, I was given the opportunity to lead a project from start to finish with other fellow co-op students, <a href="https://www.linkedin.com/in/danielkim5/" class="person" target=_blank>Daniel Kim</a> and <a href="https://www.linkedin.com/in/emilymacgowan/" class="person" target=_blank>Emily MacGowan</a>. The problem that we were given by our managers is that at RBC, many employees do not share their research findings and we wanted to figure out why that is happening and how we can solve that problem.</p>
+			<p><i>Note: This project is a proof of concept.</i>
 
 			<!-- Pre-Discovery -->
 
