--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 				</div> -->
 				<div class="work-block" style="animation-delay: 1.5s">
 					<div class="home-imgblock" style="background-image:url('assets/images/design/clearspider/banner.png')"></div>
-					<h3 class="work-title">Clear Spider Redesign</h3>
-					<h4 class="project-type">UI/UX Design</h4>
-					<p class="project-info">Redesigning a cloud-based inventory management system in 48 hours.</p>
+					<h3 class="work-title" style="color: white">Clear Spider Redesign</h3>
+					<h4 class="project-type" style="color: white">UI/UX Design</h4>
+					<p class="project-info" style="color: white">Redesigning a cloud-based inventory management system in 48 hours.</p>
 					<a href="design/clearspider.html" class="button-link"><button class="home-button">View Case Study</button></a>
 				</div>
 			</div>
